--- a/master_petugas/templates/master_petugas/alokasi_peran.html
+++ b/master_petugas/templates/master_petugas/alokasi_peran.html
@@ -282,321 +282,17 @@
                             <option value="{{ dt.id }}">{{ dt.jabatan }}</option>
                         {% endfor %}
                     </select>
-                </div>
+                </div> 
             </div>
         </div>
         
-        <button class="btn btn-danger mt-3" id="reset-filter">Clear Filter</button>
+        <button class="btn btn-primary mt-3" id="reset-filter">Clear Filter</button>
     </div>
 </div>
 
 {% endblock table-content %}
 
 {% block tables-script-extend %}
-{% comment %} <script src="{% static 'pages/js/alokasi_petugas.js' %}"></script>
-<script>
-    
-    var table = $("#basic-datatable").DataTable({
-        processing: true,
-        serverSide: true,
-        ajax: {
-            "url": "{% url 'master_petugas:datatable-json-alok' %}",
-            "headers": {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            "type": "POST",
-            "data": function (d){
-                return $.extend({}, d, {
-                    "sub_kegiatan": $('#survei-select-filter').val(),
-                    "jabatan_filter": $('#jabatan-select-filter').val(),
-                })
-            },
-        },
-        lengthMenu: [5, 25, 50, 100,'All'],
-        columns :[
-            {"data": 'petugas__nama_petugas'},
-            {"data": 'petugas__kode_petugas'},
-            {"data": 'petugas__nama_petugas'},
-            {"data": 'sub_kegiatan__nama_kegiatan'},
-            {"data" : 'role__jabatan'},
-            {"data" : 'pegawai'},
-            {"data" : 'aksi'},
-        ],
-        columnDefs: [ {
-            'targets': [6], /* column index */
-            'orderable': false, /* true or false */
-        },
-        {
-            "targets": 0,
-            "data": null,
-            "defaultContent": "",
-            "render": function (data, type, row, meta) {
-                return meta.row + 1;
-            }
-        }],
-        keys: !0,
-        language: {
-            paginate: {
-            previous: "<i class='mdi mdi-chevron-left'>",
-            next: "<i class='mdi mdi-chevron-right'>",
-            },
-            lengthMenu : "Menampilkan _MENU_",
-            search: "Cari Penugasan",
-        },
-        drawCallback: function () {
-            $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
-        },
-    });
-
-    function editAlokPetugas(id, state){
-        $('#formAlokPetugas').attr('action', "{% url 'master_petugas:update-alokasi' %}")
-        $('#submitformAlokPetugas').html('Update Data')
-    
-        $.ajax({
-            url: '{% url 'master_petugas:detail-alokasi' %}',
-            type: "POST",
-            dataType: "json",
-            data : {
-                'id' : id
-            },
-            headers: {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            success: (data) => {
-                if (data.status == 'failed'){
-                    Swal.fire(
-                        'Terjadi Kesalahan!',
-                         data.message,
-                        'info'
-                        )
-                }else{
-                    for (const [key, value] of Object.entries(data.instance)) {
-                        $('#id_'+key).val(value)
-                    }
-
-                    $('.nav-tabs a[href="#input-tab"]').tab('show');
-                    $('.nav-link').each(function(i, obj) {
-                        $(obj).removeClass('active')
-                    });
-                    if (state === 1){
-                        input_mitra_tab()
-                    }else{
-                        input_pegawai_tab()
-                    }
-
-                    table.ajax.reload();
-                }
-            },
-            error: (error) => {
-                console.log(error);
-            }
-        });
-    }
-
-    function deleteAlokasi(e){
-        swalWithBootstrapButtons.fire({
-            title: 'Are you sure?',
-            text: "Apakah anda yakin ingin menghapus data mitra?",
-            icon: 'question',
-            showCancelButton: true,
-            confirmButtonText: 'Yes, delete it!',
-            cancelButtonText: 'No, cancel!',
-            reverseButtons: false
-          }).then((result) => {
-            if (result.isConfirmed) {
-
-                $.ajax({
-                    url: '{% url 'master_petugas:delete-alokasi' %}',
-                    type: "POST",
-                    dataType: "json",
-                    data : {
-                        'id' : e
-                    },
-                    headers: {
-                        "X-Requested-With": "XMLHttpRequest",
-                        "X-CSRFToken": '{{csrf_token}}',
-                    },
-                    success: (data) => {
-                        if (data.status == 'success'){
-                            Swal.fire(
-                                'Deleted!',
-                                data.message,
-                                'success'
-                                )
-                            table.ajax.reload();
-                        }else{
-                            Swal.fire(
-                                'Terjadi Kesalahan!',
-                                 data.message,
-                                'info'
-                            )
-                        }
-
-                    },
-                    error: (error) => {
-                        console.log(error);
-                    }
-                });
-
-            }
-        }) 
-    
-    }
-
-    function resetForm(){
-        $('#formAlokPetugas')[0].reset();
-        $('.was-validated').removeClass('was-validated')
-        $('#submitformAlokPetugas').html('Kirim Data')
-        $('#formAlokPetugas').attr('action', "{% url 'master_petugas:alokasi' %}")
-    }
-
-    function clearFormValidation(form){
-        $(form + ' .form-control').each(function(i, obj) {
-            $(obj).removeClass('is-invalid')
-            $(obj).trigger('change')
-        });
-
-        $(form + ' .form-select').each(function(j, objs) {
-            $(objs).removeClass('is-invalid')
-            $(objs).trigger('change')
-        });
-        
-        $('.invalid-feedback').each(function(i, obj) {
-            $(obj).html('')
-        });
-    }
-
-    function checkSubmit(){
-        var serializedData = $('#formAlokPetugas').serialize();
-        clearFormValidation('#formAlokPetugas')
-
-        $('.invalid-feedback').html('')
-        $('.is_invalid').removeClass('is_invalid')
-        $.ajax({
-            type: 'POST',
-            url: $('#formAlokPetugas').attr('action'),
-            headers: {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            data: serializedData,
-            success: (response) =>  {
-                if (response.status == 'success'){
-                    $('#messages-content').html(response["message"])
-                    $('#msgs-upload').removeClass('alert-danger')
-                    $('#msgs-upload').addClass('alert-success')
-                    $('#msgs-upload').removeClass('d-none')
-                    table.ajax.reload();
-                    resetForm()
-                    $('.nav-tabs a[href="#alokasi-preview"]').tab('show');
-                }else{
-                    Swal.fire(
-                        'Terjadi Kesalahan!',
-                        response.message,
-                        'info'
-                    )
-                }
-            },
-            error: (response) => {
-                var errors = response["responseJSON"]["error"]
-                console.log(errors)
-                for (const [key, value] of Object.entries(errors)) {
-                    var msgs = '<ul>'
-                    value.forEach((item, index) => {
-                    
-                        msgs += '<li>'+item+'</li>'
-                        });
-                    
-                    msgs += '</ul>'
-                    $('#id_'+ key).addClass('is-invalid');
-                    $('#msg-id_'+key).html(msgs)
-                }    
-            }
-        })
-    }
-
-    $('#get-templates-upload').on('click', () => {
-        var numrows = $('#number_rows').val()
-        return window.location.replace("{% url 'master_petugas:template-alokasi' %}?rows=" + numrows);
-    })
-
-    $('#{{form_upload.import_file.id_for_label}}').on('change', () => {
-        preview_excel('preview-data-upload', '{{form_upload.import_file.id_for_label}}', 5)
-    })
-    
-    $('#confirm-submit-file').on('click', () => {
-          swalWithBootstrapButtons.fire({
-            title: 'Are you sure?',
-            text: "Apakah anda yakin ingin mengupload data mitra?",
-            icon: 'question',
-            showCancelButton: true,
-            confirmButtonText: 'Yes, upload it!',
-            cancelButtonText: 'No, cancel!',
-            reverseButtons: true
-          }).then((result) => {
-            if (result.isConfirmed) {
-
-                var data = new FormData();
-                data.append("import_file", $('#{{form_upload.import_file.id_for_label}}').get(0).files[0])
-             
-                $.ajax({
-                    type: 'POST',
-                    url: '{% url 'master_petugas:upload-alokasi' %}',
-                    data: data,
-                    processData: false,
-                    contentType: false,
-                    headers: {
-                        "X-Requested-With": "XMLHttpRequest",
-                        "X-CSRFToken": '{{csrf_token}}',
-                    },
-                    success: function (response) {
-                        
-                        if (response.status == 'error'){
-
-                            var content_msgs = '<strong>Terjadi kesalahan</strong> saat import data: <ol class="px-3 font-12">'
-
-                            for (let i = 0; i < response.messages.length; i++) {
-                                content_msgs += '<li>'+ response.messages[i] +'</li>'
-                            }
-                            
-                            $('#messages-content').html(content_msgs)
-                            $('#msgs-upload').removeClass('alert-success')
-                            $('#msgs-upload').addClass('alert-danger')
-                            $('#msgs-upload').removeClass('d-none')
-                        }else{
-                            var content_msgs = response.messages
-                            
-                            $('#messages-content').html(content_msgs)
-                            $('#msgs-upload').removeClass('alert-danger')
-                            $('#msgs-upload').addClass('alert-success')
-                            $('#msgs-upload').removeClass('d-none')
-
-                            $('#nav-item-import').addClass('d-none')
-                            $('.nav-tabs a[href="#alokasi-preview"]').tab('show');
-
-                            table.ajax.reload();
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        return console.log(xhr.responseText['messages'])
-                    }
-                })
-            } else if (
-             
-              result.dismiss === Swal.DismissReason.cancel
-            ) {
-              swalWithBootstrapButtons.fire(
-                'Cancelled',
-                'Data successfully cancelled',
-                'error'
-              )
-            }
-        }) 
-    })
-
-</script> {% endcomment %}
 
 <script src="{% static 'pages/js/alokasi_petugas.js' %}"></script>
 <script>
@@ -626,6 +322,11 @@
 
     $('#confirm-submit-file').on('click', () => {
         confirmSubmitFile("{% url 'master_petugas:upload-alokasi' %}", "{{csrf_token}}", $('#{{form_upload.import_file.id_for_label}}').get(0).files[0])
+    })
+
+    $('#get-templates-upload').on('click', () => {
+        var numrows = $('#number_rows').val()
+        return window.location.replace("{% url 'master_petugas:template-alokasi' %}?rows=" + numrows);
     })
 
 </script>
