--- a/master_petugas/templates/master_petugas/alokasi_penugasan.html
+++ b/master_petugas/templates/master_petugas/alokasi_penugasan.html
@@ -306,30 +306,17 @@
 
     let table = generate_alokasi_petugas("{% url 'master_petugas:datatable-json-alok' %}", '{{csrf_token}}')
 
-    let editAlokPetugas = (e) => {
-        editAlokasiPetugas("{% url 'master_petugas:detail-alokasi' %}", '{{csrf_token}}', "{% url 'master_petugas:update-alokasi' %}", e)
-    }
-
-    let deleteAlokasi = (e) => {
-        delete_general_request("Apakah anda yakin ingin menghapus data alokasi mitra?", "{% url 'master_petugas:delete-alokasi' %}", '{{csrf_token}}', e, table)
-    }
-
-    let resetForm = () => {
-        resetFormAlokasiPetugas("{% url 'master_petugas:alokasi' %}")
-    }
+    let editAlokPetugas = (e) => editAlokasiPetugas("{% url 'master_petugas:detail-alokasi' %}", '{{csrf_token}}', "{% url 'master_petugas:update-alokasi' %}", e)
+    let deleteAlokasi = (e) => delete_general_request("Apakah anda yakin ingin menghapus data alokasi mitra?", "{% url 'master_petugas:delete-alokasi' %}", '{{csrf_token}}', e, table)
+    let resetForm = () => resetFormAlokasiPetugas("{% url 'master_petugas:alokasi' %}")
 
     $('#formAlokPetugas').on('submit', (e) => {
         e.preventDefault()
         form_submit('{{csrf_token}}')
     })
 
-    $('#{{form_upload.import_file.id_for_label}}').on('change', () => {
-        preview_excel('preview-data-upload', '{{form_upload.import_file.id_for_label}}', 4)
-    })
-
-    $('#confirm-submit-file').on('click', () => {
-        confirmSubmitFile("{% url 'master_petugas:upload-alokasi' %}", "{{csrf_token}}", $('#{{form_upload.import_file.id_for_label}}').get(0).files[0])
-    })
+    $('#{{form_upload.import_file.id_for_label}}').on('change', () => preview_excel('preview-data-upload', '{{form_upload.import_file.id_for_label}}', 4))
+    $('#confirm-submit-file').on('click', () => confirmSubmitFile("{% url 'master_petugas:upload-alokasi' %}", "{{csrf_token}}", $('#{{form_upload.import_file.id_for_label}}').get(0).files[0]))
 
 </script>
 
